--- a/lib_common/src/main/res/values/tags.xml
+++ b/lib_common/src/main/res/values/tags.xml
@@ -3,7 +3,7 @@
 <resources>
     <item
         type="id"
-        name="previous_value" />
+        name="previousValue" />
     <item
         type="id"
         name="hasBeenAnimated" />
