--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-       <include layout="@layout/common_include_toolbar"/>
+       <include layout="@layout/include_toolbar"/>
 
         <Button
             android:id="@+id/bt"
@@ -28,7 +28,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/commonToolbar"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:throttleFirstClick="@{() -> viewModel.updateTask()}" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -37,25 +37,25 @@
             android:layout_height="50dp"
             android:background="@color/colorPrimary"
             android:gravity="center"
+            android:fontFamily="@font/antennawgl_semibold"
             android:textColor="@color/white"
             android:text="This is another text style"
-            android:typeface="@{@string/common_typeface_antennawgl_regular}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bt" />
 
         <EditText
-            android:typeface="@{@string/common_typeface_antennawgl_regular}"
             android:id="@+id/input"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:fontFamily="@font/antennawgl_semibold"
             android:text="@={viewModel.taskId}"
             app:addTextChangedListener="@{viewModel.textWatcher}"
             app:layout_constraintTop_toBottomOf="@+id/second" />
 
         <Button
-            android:typeface="@{@string/common_typeface_antennawgl_medium}"
             android:text="This a button"
+            android:fontFamily="@font/antennawgl_semibold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/input"
             android:layout_width="match_parent"
