--- a/lib_common/src/main/res/values/dimens.xml
+++ b/lib_common/src/main/res/values/dimens.xml
@@ -1,9 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="common_dp15">15dp</dimen>
-    <dimen name="common_dp18">18dp</dimen>
-    <dimen name="common_dp14">14dp</dimen>
-    <dimen name="common_dp16">16dp</dimen>
-    <dimen name="common_dp12">12dp</dimen>
-    <dimen name="common_dp4">4dp</dimen>
+    <dimen name="dp1">1dp</dimen>
+    <dimen name="dp2">2dp</dimen>
+    <dimen name="dp4">4dp</dimen>
+    <dimen name="dp6">6dp</dimen>
+    <dimen name="dp8">8dp</dimen>
+    <dimen name="dp10">10dp</dimen>
+    <dimen name="dp12">12dp</dimen>
+    <dimen name="dp14">14dp</dimen>
+    <dimen name="dp15">15dp</dimen>
+    <dimen name="dp16">16dp</dimen>
+    <dimen name="dp18">18dp</dimen>
+    <dimen name="dp20">20dp</dimen>
+    <dimen name="dp22">22dp</dimen>
+    <dimen name="dp24">24dp</dimen>
+    <dimen name="dp26">26dp</dimen>
+    <dimen name="dp28">28dp</dimen>
+    <dimen name="dp30">30dp</dimen>
+    <dimen name="dp32">32dp</dimen>
+    <dimen name="dp34">34dp</dimen>
+    <dimen name="dp36">36dp</dimen>
+    <dimen name="dp38">38dp</dimen>
+    <dimen name="dp40">40dp</dimen>
+    <dimen name="dp42">42dp</dimen>
+    <dimen name="dp44">44dp</dimen>
+    <dimen name="dp46">46dp</dimen>
+    <dimen name="dp48">48dp</dimen>
+    <dimen name="dp50">50dp</dimen>
+
+    <dimen name="sp1">1dp</dimen>
+    <dimen name="sp2">2dp</dimen>
+    <dimen name="sp4">4dp</dimen>
+    <dimen name="sp6">6dp</dimen>
+    <dimen name="sp8">8dp</dimen>
+    <dimen name="sp10">10dp</dimen>
+    <dimen name="sp12">12dp</dimen>
+    <dimen name="sp14">14dp</dimen>
+    <dimen name="sp15">15dp</dimen>
+    <dimen name="sp16">16dp</dimen>
+    <dimen name="sp18">18dp</dimen>
+    <dimen name="sp20">20dp</dimen>
+    <dimen name="sp22">22dp</dimen>
+    <dimen name="sp24">24dp</dimen>
+    <dimen name="sp26">26dp</dimen>
+    <dimen name="sp28">28dp</dimen>
+    <dimen name="sp30">30dp</dimen>
+    <dimen name="sp32">32dp</dimen>
+    <dimen name="sp34">34dp</dimen>
+    <dimen name="sp36">36dp</dimen>
+    <dimen name="sp38">38dp</dimen>
+    <dimen name="sp40">40dp</dimen>
+    <dimen name="sp42">42dp</dimen>
+    <dimen name="sp44">44dp</dimen>
+    <dimen name="sp46">46dp</dimen>
+    <dimen name="sp48">48dp</dimen>
+    <dimen name="sp50">50dp</dimen>
 </resources>
