--- a/lib_common/src/main/res/values/ids.xml
+++ b/lib_common/src/main/res/values/ids.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <item name="common_loadingCancelable" type="id" />
-    <item name="common_loadingHoldable" type="id" />
-    <item name="common_loading_frame" type="id" />
+    <item name="loadingCancelable" type="id" />
+    <item name="loadingHoldable" type="id" />
+    <item name="loadingFrame" type="id" />
 
 </resources>
