--- a/module_profile/src/main/res/layout/profile_fragment_sample.xml
+++ b/module_profile/src/main/res/layout/profile_fragment_sample.xml
@@ -12,7 +12,7 @@
         android:src="@drawable/pic_all"
         android:scaleType="centerCrop" />
 
-    <include layout="@layout/common_include_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
 
     <TextView
