--- a/lib_common/src/main/res/layout/include_toolbar.xml
+++ b/lib_common/src/main/res/layout/include_toolbar.xml
@@ -2,14 +2,14 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/commonToolbar"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="35dp"
     android:background="@color/colorPrimary"
     app:contentInsetStartWithNavigation="0dp">
 
     <TextView
-        android:id="@+id/commonToolbarTitle"
+        android:id="@+id/toolbarTitle"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,20 +19,20 @@
         android:fontFamily="@font/antennawgl_regularitalic"
         android:scrollHorizontally="true"
         android:textColor="@color/white"
-        android:textSize="@dimen/common_dp16"
+        android:textSize="@dimen/dp16"
         tools:text="title" />
 
 
     <TextView
-        android:id="@+id/commonToolbarRightSubtitle"
+        android:id="@+id/toolbarSubtitle"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:fontFamily="@font/antennawgl_regularitalic"
-        android:layout_marginEnd="@dimen/common_dp18"
+        android:layout_marginEnd="@dimen/dp18"
         android:singleLine="true"
         android:textColor="@color/white"
-        android:textSize="@dimen/common_dp14"
+        android:textSize="@dimen/sp14"
         tools:text="subtitle" />
 </androidx.appcompat.widget.Toolbar>
