--- a/lib_widget/src/main/res/drawable/shape_round_toast_background.xml
+++ b/lib_widget/src/main/res/drawable/shape_round_toast_background.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <solid android:color="#CC000000"/>
-    <corners android:radius="@dimen/dp4"/>
+    <corners android:radius="4dp"/>
 </shape>
