--- a/module_sample/src/main/res/layout/simple_activity_login.xml
+++ b/module_sample/src/main/res/layout/simple_activity_login.xml
@@ -10,7 +10,7 @@
 
         <variable
             name="viewmodel"
-            type="com.capgemini.module_profile.viewmodel.LoginViewModel" />
+            type="com.capgemini.module_sample.viewmodel.SimpleLoginViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,6 +91,7 @@
                     android:enabled="@{viewmodel.validate,default = false}"
                     android:fontFamily="@font/antennawgl_regular"
                     android:textSize="20dp"
+                    android:textAllCaps="false"
                     android:text="Login" />
 
                 <Button
@@ -100,7 +101,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_weight="1"
                     android:fontFamily="@font/antennawgl_regular"
-                    android:text="@{viewmodel.validate? @string/profile_hai:@string/profile_login}"
+                    android:text="@{viewmodel.validate? @string/simple_hide_show_status_bar:@string/simple_login}"
                     android:textStyle="bold" />
 
                 <Button
@@ -112,6 +113,7 @@
                     android:layout_weight="1"
                     android:onClick="@{()->viewmodel.goToFragmentActivity()}"
                     android:text="goToFragmentActivity"
+                    android:textAllCaps="false"
                     android:textStyle="bold" />
             </LinearLayout>
 
