--- a/module_sample/src/main/res/layout/simple_activity_list.xml
+++ b/module_sample/src/main/res/layout/simple_activity_list.xml
@@ -21,8 +21,10 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constrainedHeight="true"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            tools:itemCount="300"
+            tools:itemCount="10"
             tools:listitem="@layout/simple_item_layout_test" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
