--- a/module_sample/src/main/res/layout/simple_item_layout_test.xml
+++ b/module_sample/src/main/res/layout/simple_item_layout_test.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.capgemini.entity.ItemData" />
+            type="com.capgemini.entity.ItemEntity" />
 
     </data>
 
