--- a/module_sample/src/main/res/layout/simple_fragment_sample.xml
+++ b/module_sample/src/main/res/layout/simple_fragment_sample.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.SimpleFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/mIv"
+    <data>
+
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/pic_all"
-        android:scaleType="centerCrop" />
+        tools:context=".fragment.SimpleFragment">
 
-    <include layout="@layout/include_toolbar" />
+        <ImageView
+            android:id="@+id/mIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/pic_all"
+            android:scaleType="centerCrop" />
+
+        <include layout="@layout/include_toolbar" />
 
 
-    <TextView
-        android:gravity="center"
-        android:id="@+id/mText"
-        tools:text="这是测试"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/pic_all"
-        android:scaleType="centerCrop" />
+        <TextView
+            android:gravity="center"
+            android:id="@+id/mText"
+            tools:text="这是测试"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/pic_all"
+            android:scaleType="centerCrop" />
 
-</FrameLayout>
+    </FrameLayout>
+</layout>
