--- a/lib_common/src/main/res/layout/include_toolbar.xml
+++ b/lib_common/src/main/res/layout/include_toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="35dp"
+    android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
     app:contentInsetStartWithNavigation="0dp">
 
