--- a/lib_widget/src/main/res/values/ids.xml
+++ b/lib_widget/src/main/res/values/ids.xml
@@ -4,5 +4,6 @@
     <item name="loadingCancelable" type="id" />
     <item name="loadingHoldable" type="id" />
     <item name="loadingFrame" type="id" />
+    <item name="delete" type="drawable" />
 
 </resources>
