--- a/module_sample/src/main/res/values/string.xml
+++ b/module_sample/src/main/res/values/string.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="simple_star">个星标</string>
-    <string name="simple_fork">个复刻</string>
+    <string name="simple_star">%d个星标</string>
+    <string name="simple_fork">%d个复刻</string>
 </resources>
