--- a/module_sample/src/main/res/layout/simple_activity_user_list.xml
+++ b/module_sample/src/main/res/layout/simple_activity_user_list.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.capgemini.module_sample.viewmodel.SimpleUserListViewModel" />
+
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -44,6 +51,7 @@
             app:layout_constraintTop_toBottomOf="@+id/text"
             tools:itemCount="10"
             tools:layout_editor_absoluteX="91dp"
+            tools:listitem="@layout/simple_listfragment_list"
             />
 
         <androidx.constraintlayout.widget.Guideline
