--- a/lib_common/src/main/res/layout/include_toolbar.xml
+++ b/lib_common/src/main/res/layout/include_toolbar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary"
+    android:background="@color/black"
     app:contentInsetStartWithNavigation="0dp">
 
     <TextView
