--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorRed">#FF0000</color>
+    <color name="black">#000000</color>
 
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
